[package]
name = "ytclip-rs"
version = "1.0.0"
edition = "2021"
authors = ["Eden Chan"]
description = "Fast and efficient YouTube video clip downloader"
license = "MIT"
repository = "https://github.com/eden-chan/ytclip-rs"

[[bin]]
name = "ytclip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
colored = "2.1"
url = "2.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true